# StreamingDemoAndroid

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: JNICore.cpp  JNICore.h  JNILoaderServicesImpl.cpp  JNILoaderServicesImpl.h  JNIObjectPool.h  JNIPlaylistConverter.cpp  JNIPlaylistConverter.h  JNIStream.cpp  JNIStream.h  JNIStreamPool.h  JNIStreamStateDelegateImpl.cpp  JNIStreamStateDelegateImpl.h  JNITSPartLoaderServiceImpl.cpp  JNITSPartLoaderServiceImpl.h  JNIUtils.cpp  JNIUtils.h  native-lib.cpp
app/src/main/cpp/Private/: StreamImpl.cpp  StreamImpl.hpp
app/src/main/cpp/Private/Decode/: DecodeWorker.cpp  DecodeWorker.hpp  FrameReader.cpp  FrameReader.hpp  IWorkerDelegate.hpp  Info.cpp  Info.hpp  InputStreamDataProvider.cpp  InputStreamDataProvider.hpp  Worker.cpp  Worker.hpp  WorkerTask.cpp  WorkerTask.hpp
app/src/main/cpp/Private/Decrypt/: Decryptor.cpp  Decryptor.hpp  DecryptorKeyStorage.cpp  DecryptorKeyStorage.hpp
app/src/main/cpp/Private/Interfaces/: IDecryptorKeyLoaderService.hpp  IStreamFrameAccessor.hpp  IStreamStateAccessor.hpp  IStreamStateDelegate.hpp  ITSPartLoaderService.hpp
app/src/main/cpp/Private/TSParts/: ITSPartWorkerDelegate.hpp  TSPartLoader.cpp  TSPartLoader.hpp  TSPartWorker.cpp  (+1 more)
app/src/main/cpp/Public/: Config.cpp  Config.hpp  Stream.cpp  Stream.hpp  StreamState.h
app/src/main/jniLibs/include/: config.h
app/src/main/res/menu/: menu_main.xml
app/src/main/res/raw/: fragment_shader.glsl  vertex_shader.glsl  video_fs.glsl
app/src/main/res/values/: strings.xml
(+50 files in other folders)
